--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
@@ -19,7 +19,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0D1-tr-51a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-37" y="164"/>
+            <point key="canvasLocation" x="-197" y="169"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="5">
@@ -39,6 +39,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="JJX-wP-aqr" kind="modal" id="Tr1-L4-X1O"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OmQ-q1-QLC">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -50,7 +53,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="settings@2x.png" translatesAutoresizingMaskIntoConstraints="NO" id="faf-b2-dRe">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="logo@2x.png" translatesAutoresizingMaskIntoConstraints="NO" id="faf-b2-dRe">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="174" id="ShJ-Ya-szB"/>
                                     <constraint firstAttribute="width" constant="264" id="vnx-fB-sBi"/>
@@ -76,11 +79,186 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="393" y="169"/>
+        </scene>
+        <!--View Controller - Feed-->
+        <scene sceneID="Jfh-6X-HZ3">
+            <objects>
+                <viewController title="Feed" id="4Lo-Yh-sPD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="frb-Ew-X2Y">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="IIi-2i-7k3">
+                                <items>
+                                    <navigationItem title="Feed" id="BAx-TK-9h4"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IIi-2i-7k3" firstAttribute="top" secondItem="frb-Ew-X2Y" secondAttribute="top" type="default" id="6MD-15-9T8"/>
+                            <constraint firstItem="IIi-2i-7k3" firstAttribute="leading" secondItem="frb-Ew-X2Y" secondAttribute="leading" type="default" id="9Cd-2D-F3Z"/>
+                            <constraint firstItem="IIi-2i-7k3" firstAttribute="trailing" secondItem="frb-Ew-X2Y" secondAttribute="trailing" type="default" id="USe-Ms-1gE"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Feed" image="feed@2x.png" id="AJx-KP-Lmb"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xEa-73-6Gs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1530" y="-489"/>
+        </scene>
+        <!--View Controller - You-->
+        <scene sceneID="XLP-Mv-eOZ">
+            <objects>
+                <viewController title="You" id="CVl-Ab-bnr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9p3-Ro-aav">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="UtR-b2-bK0">
+                                <items>
+                                    <navigationItem title="You" id="iRP-a4-1Nn"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UtR-b2-bK0" firstAttribute="leading" secondItem="9p3-Ro-aav" secondAttribute="leading" type="default" id="FDd-jX-taJ"/>
+                            <constraint firstItem="UtR-b2-bK0" firstAttribute="top" secondItem="9p3-Ro-aav" secondAttribute="top" type="default" id="FlJ-sx-d5k"/>
+                            <constraint firstItem="UtR-b2-bK0" firstAttribute="trailing" secondItem="9p3-Ro-aav" secondAttribute="trailing" type="default" id="gtR-wm-rG4"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="You" image="you@2x.png" id="tyQ-7y-Zry"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kiR-fG-u44" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1530" y="-1141"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Ouk-Iu-fzV">
+            <objects>
+                <tabBarController definesPresentationContext="YES" id="JJX-wP-aqr" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="d4o-g5-o9J">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="CVl-Ab-bnr" kind="relationship" relationship="viewControllers" id="ptK-Mm-CRU"/>
+                        <segue destination="4Lo-Yh-sPD" kind="relationship" relationship="viewControllers" id="CCK-Qe-uuq"/>
+                        <segue destination="3dw-Jq-uKR" kind="relationship" relationship="viewControllers" id="xNz-yf-vl3"/>
+                        <segue destination="gX3-FD-MgH" kind="relationship" relationship="viewControllers" id="eis-ui-XUg"/>
+                        <segue destination="RaY-cS-CcR" kind="relationship" relationship="viewControllers" id="N4j-fh-lje"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6iP-rK-ZaL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="972" y="177"/>
+        </scene>
+        <!--Table View Controller - Workouts-->
+        <scene sceneID="7ys-L4-n5M">
+            <objects>
+                <tableViewController title="Workouts" id="RaY-cS-CcR" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="WcU-jm-sk7">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="sUT-8o-s66">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="RaY-cS-CcR" id="ZQX-HV-dUw"/>
+                            <outlet property="delegate" destination="RaY-cS-CcR" id="Gvh-WI-dq6"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Workouts" image="workouts@2x.png" id="Wen-WT-GBf"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E1E-dz-Skf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1530" y="177"/>
+        </scene>
+        <!--View Controller - Settings-->
+        <scene sceneID="Evg-bj-aoI">
+            <objects>
+                <viewController title="Settings" id="gX3-FD-MgH" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Pl-ru-sb9">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="leh-CP-T3d">
+                                <items>
+                                    <navigationItem title="Settings" id="ZqG-B7-U2G"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="leh-CP-T3d" firstAttribute="trailing" secondItem="0Pl-ru-sb9" secondAttribute="trailing" type="default" id="Wzc-1S-7dQ"/>
+                            <constraint firstItem="leh-CP-T3d" firstAttribute="top" secondItem="0Pl-ru-sb9" secondAttribute="top" type="default" id="wAZ-ch-Sx5"/>
+                            <constraint firstItem="leh-CP-T3d" firstAttribute="leading" secondItem="0Pl-ru-sb9" secondAttribute="leading" type="default" id="wSL-cD-tls"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settings@2x.png" id="HdV-Uh-8i4"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CpG-yJ-GNt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1530" y="1553"/>
+        </scene>
+        <!--View Controller - Alexis-->
+        <scene sceneID="jfO-EQ-nGE">
+            <objects>
+                <viewController title="Alexis" id="3dw-Jq-uKR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ssz-1i-dYe">
+                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="r33-Iy-aq6">
+                                <items>
+                                    <navigationItem title="Alexis" id="1oc-37-00h"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="r33-Iy-aq6" firstAttribute="leading" secondItem="ssz-1i-dYe" secondAttribute="leading" type="default" id="03l-0b-nCM"/>
+                            <constraint firstItem="r33-Iy-aq6" firstAttribute="trailing" secondItem="ssz-1i-dYe" secondAttribute="trailing" type="default" id="Ygk-6w-XLR"/>
+                            <constraint firstItem="r33-Iy-aq6" firstAttribute="top" secondItem="ssz-1i-dYe" secondAttribute="top" type="default" id="hIq-8a-E0v"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Alexis" image="alexis@2x.png" id="kG8-KW-Gbg"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HZU-KI-fHS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1530" y="901"/>
         </scene>
     </scenes>
     <resources>
+        <image name="alexis@2x.png" width="50" height="57"/>
+        <image name="feed@2x.png" width="51" height="38"/>
         <image name="fittr wallpaper.PNG" width="1920" height="1080"/>
+        <image name="logo@2x.png" width="534" height="347"/>
         <image name="settings@2x.png" width="50" height="50"/>
+        <image name="workouts@2x.png" width="54" height="34"/>
+        <image name="you@2x.png" width="48" height="46"/>
     </resources>
     <classes>
         <class className="NSLayoutConstraint" superclassName="NSObject">
