--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -179,11 +179,24 @@
                                     <navigationItem title="You" id="iRP-a4-1Nn"/>
                                 </items>
                             </navigationBar>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ljh-In-Gj9">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="285" id="xXT-ET-ow5"/>
+                                </constraints>
+                                <segments>
+                                    <segment title=""/>
+                                    <segment title="Second"/>
+                                    <segment title=""/>
+                                </segments>
+                                <color key="tintColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
+                            </segmentedControl>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="UtR-b2-bK0" firstAttribute="leading" secondItem="9p3-Ro-aav" secondAttribute="leading" type="default" id="FDd-jX-taJ"/>
                             <constraint firstItem="UtR-b2-bK0" firstAttribute="top" secondItem="9p3-Ro-aav" secondAttribute="top" type="default" id="FlJ-sx-d5k"/>
+                            <constraint firstItem="ljh-In-Gj9" firstAttribute="centerX" secondItem="UtR-b2-bK0" secondAttribute="centerX" type="default" id="YqQ-tD-YZK"/>
+                            <constraint firstItem="ljh-In-Gj9" firstAttribute="top" secondItem="9p3-Ro-aav" secondAttribute="top" constant="150" id="exR-gP-LTK"/>
                             <constraint firstItem="UtR-b2-bK0" firstAttribute="trailing" secondItem="9p3-Ro-aav" secondAttribute="trailing" type="default" id="gtR-wm-rG4"/>
                         </constraints>
                     </view>
@@ -192,7 +205,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kiR-fG-u44" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2170" y="83"/>
+            <point key="canvasLocation" x="2170" y="65"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Ouk-Iu-fzV">
@@ -247,7 +260,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E1E-dz-Skf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2162" y="2821"/>
+            <point key="canvasLocation" x="2162" y="2793"/>
         </scene>
         <!--View Controller - Settings-->
         <scene sceneID="Evg-bj-aoI">
@@ -291,12 +304,29 @@
                                     <navigationItem title="Workouts" id="1oc-37-00h"/>
                                 </items>
                             </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gu-sS-Uh9">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="63" id="fn4-Sy-fnz"/>
+                                    <constraint firstAttribute="width" constant="300" id="jTa-U9-B2n"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" backgroundImage="startworkout@2x.png">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected" backgroundImage="startworkoutclick@2x.png"/>
+                                <state key="highlighted" backgroundImage="startworkoutclick@2x.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="r33-Iy-aq6" firstAttribute="leading" secondItem="ssz-1i-dYe" secondAttribute="leading" type="default" id="03l-0b-nCM"/>
+                            <constraint firstItem="3gu-sS-Uh9" firstAttribute="centerX" secondItem="r33-Iy-aq6" secondAttribute="centerX" type="default" id="FRU-oU-5hp"/>
                             <constraint firstItem="r33-Iy-aq6" firstAttribute="trailing" secondItem="ssz-1i-dYe" secondAttribute="trailing" type="default" id="Ygk-6w-XLR"/>
                             <constraint firstItem="r33-Iy-aq6" firstAttribute="top" secondItem="ssz-1i-dYe" secondAttribute="top" type="default" id="hIq-8a-E0v"/>
+                            <constraint firstItem="3gu-sS-Uh9" firstAttribute="top" secondItem="ssz-1i-dYe" secondAttribute="top" constant="54" id="o7N-rn-en8"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Workouts" image="workouts.png" id="kG8-KW-Gbg"/>
@@ -318,6 +348,8 @@
         <image name="roundrectbg@2x.png" width="556" height="91"/>
         <image name="roundrectbgclick@2x.png" width="556" height="91"/>
         <image name="settings.png" width="29" height="29"/>
+        <image name="startworkout@2x.png" width="600" height="125"/>
+        <image name="startworkoutclick@2x.png" width="600" height="125"/>
         <image name="workouts.png" width="48" height="30"/>
         <image name="you.png" width="28" height="26"/>
     </resources>
