--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -278,9 +278,9 @@
                                     <constraint firstAttribute="width" constant="285" id="xXT-ET-ow5"/>
                                 </constraints>
                                 <segments>
-                                    <segment title=""/>
-                                    <segment title="Second"/>
-                                    <segment title=""/>
+                                    <segment title="Trophies"/>
+                                    <segment title="Groups"/>
+                                    <segment title="Graphs"/>
                                 </segments>
                                 <color key="tintColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                             </segmentedControl>
